<resources>
    <string name="app_name">GPSNausore6</string>
    <string name="title_navigation">Navigation</string>
    <string name="title_devices">Appareils</string>
    <string name="title_settings">Paramêtres</string>


    <string name="title_connectedDevice">Appareil connecté :</string>
    <string name="title_availableDevice">Appareil jumelés :</string>
    <string name="button_disconnect">Déconnecter</string>
    <string name="text_noConnectedDevice">Pas d\'appareil conntecté.</string>

    <string name="title_test">Test</string>

    <string name="access_token" translatable="false">sk.eyJ1IjoibWFyaW5vbGl2aWVyIiwiYSI6ImNqdnA2bW96bjFlMmg0YXFzNmJ5ZDY1aXgifQ._X6ltmj1UucCCfzwnsX9wA</string>
    <string name="user_location_permission_explanation">This app needs location permissions to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
