<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/deviceList"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeviceList">


    <TextView
        android:id="@+id/title_deviceList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_devices"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/connectedDevice_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/title_connectedDevice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_deviceList" />

    <TextView
        android:id="@+id/connectedDeviceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_noConnectedDevice"
        app:layout_constraintStart_toStartOf="@+id/title_deviceList"
        app:layout_constraintTop_toBottomOf="@+id/connectedDevice_title" />

    <Button
        android:id="@+id/disconnectDeviceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/button_disconnect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_deviceList" />

    <TextView
        android:id="@+id/pairedDevice_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/title_availableDevice"
        app:layout_constraintStart_toStartOf="@+id/title_deviceList"
        app:layout_constraintTop_toBottomOf="@+id/connectedDeviceText" />

    <ListView
        android:id="@+id/devicesList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:headerDividersEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pairedDevice_title" />


</android.support.constraint.ConstraintLayout>